--- a/MindMap/MindMap.Shared/Pages/NodeDetailsPage.xaml
+++ b/MindMap/MindMap.Shared/Pages/NodeDetailsPage.xaml
@@ -30,18 +30,49 @@
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <Grid.RowDefinitions >
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="6*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
             <CaptureElement x:Name="PhotoPreview"
                             Height="300"
                             Width="300"
                             Grid.Row="0" 
-                            Tapped="PhotoPreview_Tapped"/>
+                            Tapped="PhotoPreview_Tapped"
+                            Grid.ColumnSpan="2"/>
+            <TextBlock Text="Title" 
+                       Grid.Row="1"/>
+            <TextBox x:Name="tb_Title"
+                     Grid.Row="2"
+                     Text="{Binding Node.Title}"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"
+                     Grid.ColumnSpan="2"/>
+
+            <TextBlock Text="Add picture" 
+                       Grid.Row="3"/>
+            <TextBlock x:Name="tb_SelectedPicture" 
+                       Grid.Row="4"
+                       Grid.Column="0"
+                       Text="{Binding SelectedPicturePath}"/>
+            <Button Content="_pic" 
+                    Grid.Row="4"
+                    Grid.Column="1"/>
+            
             <Button Content="Save"
                     Command="{Binding Save}" 
-                    Grid.Row="2"/>
+                    Grid.Row="5"
+                    FontStretch="Expanded"
+                    VerticalAlignment="Stretch"
+                    HorizontalAlignment="Stretch"
+                    Grid.ColumnSpan="2"/>
         </Grid>
     </Grid>
 </Page>
