fixed bug: nodes with wrong id's being saved and therefore visualizing wrong

--- a/MindMap/MindMap.Shared/Pages/MindMapPage.xaml
+++ b/MindMap/MindMap.Shared/Pages/MindMapPage.xaml
@@ -41,7 +41,7 @@
             <ListView Margin="10" 
                       Name="lvDataBinding" 
                       ItemsSource="{Binding NodesList}"
-                      SelectedItem="{Binding SelectedNode}">
+                      SelectedItem="{Binding SelectedNode, Mode=TwoWay}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Canvas Name="canvasContext" Height="110">
