--- a/MindMap/MindMap.Shared/Pages/NodeDetailsPage.xaml
+++ b/MindMap/MindMap.Shared/Pages/NodeDetailsPage.xaml
@@ -30,7 +30,9 @@
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <Grid.RowDefinitions >
-                <RowDefinition Height="6*"/>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="2*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="1*"/>
@@ -42,8 +44,8 @@
                 <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
             <CaptureElement x:Name="PhotoPreview"
-                            Height="300"
-                            Width="300"
+                            Height="200"
+                            Width="200"
                             Grid.Row="0" 
                             Tapped="PhotoPreview_Tapped"
                             Grid.ColumnSpan="2"/>
@@ -51,24 +53,32 @@
                        Grid.Row="1"/>
             <TextBox x:Name="tb_Title"
                      Grid.Row="2"
-                     Text="{Binding Node.Title}"
+                     Text="{Binding Node.Title, Mode=TwoWay}"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"
+                     Grid.ColumnSpan="2"/>
+            <TextBlock Text="Content" 
+                       Grid.Row="3"/>
+            <TextBox x:Name="tb_Content"
+                     Grid.Row="4"
+                     Text="{Binding Node.Content, Mode=TwoWay}"
                      VerticalAlignment="Stretch"
                      HorizontalAlignment="Stretch"
                      Grid.ColumnSpan="2"/>
 
             <TextBlock Text="Add picture" 
-                       Grid.Row="3"/>
+                       Grid.Row="5"/>
             <TextBlock x:Name="tb_SelectedPicture" 
-                       Grid.Row="4"
+                       Grid.Row="6"
                        Grid.Column="0"
                        Text="{Binding SelectedPicturePath}"/>
             <Button Content="_pic" 
-                    Grid.Row="4"
+                    Grid.Row="6"
                     Grid.Column="1"/>
             
             <Button Content="Save"
                     Command="{Binding Save}" 
-                    Grid.Row="5"
+                    Grid.Row="7"
                     FontStretch="Expanded"
                     VerticalAlignment="Stretch"
                     HorizontalAlignment="Stretch"
