--- a/MindMap/MindMap.Shared/Pages/MindMapPage.xaml
+++ b/MindMap/MindMap.Shared/Pages/MindMapPage.xaml
@@ -36,13 +36,11 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
-
-        <!-- Title Panel -->
         <views:HeaderView Grid.Row="0" Margin="19,0,0,0"
                           TitleText="mind map"
-                          SignOutEvent="OnSignOutCompleated"/>
+                          SignOutEvent="OnSignOutCompleated"
+                          GoBackEvent="OnGoBackCompleated"/>
 
-        <!--Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
             <Grid.Resources>
                 <Storyboard x:Name="sb_grid">
@@ -57,21 +55,25 @@
                 
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Canvas Name="canvasContext" Height="110">
-                            <StackPanel>
-                                <TextBlock Text="{Binding Title, Mode=TwoWay}" 
-                                            FontSize="27"/>
+                        <Canvas Name="canvasContext" Height="200">
+                            <StackPanel
+                                Margin="0, 30, 0, 0">
+                                <TextBlock Margin="20"
+                                            Text="{Binding Title, Mode=TwoWay}" 
+                                            FontSize="27"
+                                           HorizontalAlignment="Center"/>
                                 <TextBlock Text="{Binding Content, Mode=TwoWay}" 
-                                            FontSize="27"/>
+                                            FontSize="27"
+                                           HorizontalAlignment="Center"/>
                             </StackPanel>
-                            <Rectangle VerticalAlignment="Stretch"
+                            <Ellipse VerticalAlignment="Stretch"
                                         HorizontalAlignment="Stretch" 
-                                        Height="100"
-                                        Width="150"
+                                        Height="200"
+                                        Width="200"
                                         Fill="Aquamarine"
                                         Opacity="0.5"
                                         Holding="Rectangle_Holding">
-                            </Rectangle>
+                            </Ellipse>
                         </Canvas>
                     </DataTemplate>
                 </ListView.ItemTemplate>
