--- a/MindMap/MindMap.Shared/UserControls/HeaderView.xaml
+++ b/MindMap/MindMap.Shared/UserControls/HeaderView.xaml
@@ -8,7 +8,11 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-
+    
+    <UserControl.Resources>
+        <Style TargetType="TextBlock" BasedOn="{StaticResource TextBlockStyle}"/>
+        <Style TargetType="Button" BasedOn="{StaticResource ButtonsStyle}" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
